# 15-puzzle-using-bfs-dfs-astar

./: .gitignore  4x4_01_00002_bfs_rdul_stats.txt  Exception.py  LICENSE  Main.py  README.md  program.py  pyproject.toml  requirements.txt  setup.py
algorithms/: AStar.py  BFS.py  BaseAlgorithm.py  DFS.py  Operator.py
logger/: Logger.py
memory/: State.py
tests/: test_algorithms.py  test_state.py  tests_integration.py
tests/Resources/: ramka1_4x4.txt  ramka_solved_4x4.txt
utests/: Operator_test.py  State_test.py  test_algorithms.py  test_state.py
