[tool.poetry]
name = "sise"
version = "0.1.0"
description = "Solving a 15 puzzle"
authors = ["Jan Wądołowski <janwadolowski@gmail.com>, Bartłomiej Kubiak <kubiakbartek90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.4"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
pytest = "^7.1.2"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
